# cmake-sandbox

./: README.md
fancylib/: CMakeLists.txt  README.md
fancylib/example/: CMakeLists.txt
fancylib/fancylib/: CMakeLists.txt
fancylib/fancylib/core/: CMakeLists.txt  coreutils.cpp
package-config/: README.md
package-config/fancylib/: CMakeLists.txt
package-config/fancylib/src/: CMakeLists.txt
package-config/fancylib/tests/: CMakeLists.txt
package-config/fancylib/tests/src/: main.cpp
target-source/: README.md
target-source/example/: main.cpp
target-source/fancylib/core/: coreutils.h  fancyutils.cpp
target-source/fancylib/public/: CMakeLists.txt
target-source/tests/: CMakeLists.txt
target-source/tests/src/: main.cpp
